# whisper-voice

./: CLAUDE.md  LICENSE  README.md  TODO.md  conftest.py  main.py  pyproject.toml  requirements.txt  test_whisper_voice.py  whisper_voice.py
.claude/: settings.local.json
.github/workflows/: tests.yml
